docs/style.css
body {
    font-family: Arial, sans-serif;
    text-align: center;
}

.canvas {
    display: block;
    flex-direction: column;
    flex-wrap: nowrap;
    align-items: center;
    justify-content: center;
    /*overflow-x: visible;*/
}

.canvas_area_hor {
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    align-items: center;
    justify-content: center;
}

.canvas_area_ver {
    display: flex;
    flex-direction: column;
    flex-wrap: nowrap;
    align-items: center;
    justify-content: center;
}

.board {
    display: block;
    margin: 0px;
    border: 5px solid #000000;
    border-collapse: collapse;
    border-radius: 5px;
    white-space: nowrap;
}
.solved_board_incorrect {
    border: 5px solid red;
}
.solved_board_correct {
    border: 5px solid #06b821;
}

.cell {
    width: 50px;
    height: 50px;
    border: 1px solid #000000;
    display: inline-block;
    text-align: center;
    vertical-align: middle;
    /*font-size: 20px;*/
    cursor: pointer;
    -webkit-user-select: none;
    user-select: none;
    /* Default color for unrevealed tiles */
    background-color: #a8a7a7;
 
    /* Default color for unrevealed tile text */
    color: #000000;
}
.white {

    /* Color for revealed tiles */
    background-color: #ffffff;
 
    /* Color for revealed tile text */
    color: #000;
}
.black {
    background-color: #000000;
}
.cell_text {
    /*font-size: 30px;*/
    vertical-align: middle;
}

.black.mistake {
    background-color: rgb(154, 0, 0);
}
.white.mistake {
    background-color: rgb(255, 77, 0);
}

.cell.selected {
    outline: 3px solid red;
    outline-offset: -3px;
}

.cell.selected.mistake {
    outline-color:yellowgreen;
}
/*
ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
}
/*
li {
    display: inline-block;
}

a {
    display: block;
}

div {
    display: block;
}

span {
    display: block;
}

li span, .dropbtn {
    display: block;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
}
  
li span:hover, .dropdown:hover .dropbtn {
    background-color: rgb(255, 145, 0);
}
  
li.dropdown {
    display: inline-block;
}

.dropdown-content {
    display: none;
    position: absolute;
    background-color: #ffffff;
    border: 2px solid rgb(255, 145, 0);
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    z-index: 1;
}
  
.dropdown-content span {
    color: black;
    padding: 12px 16px;
    text-decoration: none;
    display: block;
    text-align: left;
}

.dropdown-subcontent {
    display: none;
    position: absolute;
    left: 100%;
    top: 0px;
    background-color: #ffffff;
    border: 2px solid rgb(255, 145, 0);
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    z-index: 1;
}
  
.dropdown-subcontent span {
    color: black;
    padding: 12px 16px;
    text-decoration: none;
    display: block;
    text-align: left;
}
  
.dropdown-content>span:hover {background-color: #f1f1f1;}

.dropdown-subcontent>span:hover {background-color: #f1f1f1;}
  
.dropdown:hover .dropdown-content {
    display: block;
}

span:hover>.dropdown-subcontent {
    display: block;
}*/

/* Style the dropdown menu */
.dropdown {
    position: relative;
    display: inline-block;
}

.dropbtn {
    text-align: center;
    padding: 14px 16px;
}

.dropbtn:hover {
    background-color: rgb(255, 145, 0);
}

/* Style the dropdown menu items */
.dropdown-content {
    display: none;
    position: absolute;
    /*min-width: 160px;*/
    z-index: 1;
    background-color: #ffffff;
    border: 2px solid rgb(255, 145, 0);
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    white-space: nowrap;
}

/* Style the dropdown menu links */
.dropdown-content t {
    color: black;
    padding: 12px 16px;
    text-decoration: none;
    display: block;
}

/* Style the dropdown menu links on hover */
.dropdown-content t:hover {
    background-color: #f1f1f1;
}

/* Show the dropdown menu when hovering over the dropdown */
.dropdown:hover .dropdown-content {
    display: block;
}

/* Style the nested dropdown menu */
.nested-dropdown {
    position: relative;
}

/* Style the nested dropdown menu items */
.nested-dropdown-content {
    display: none;
    position: absolute;
    min-width: 260px;
    left: 100%;
    top: -1px;
    z-index: 1;
    background-color: #ffffff;
    border: 2px solid rgb(255, 145, 0);
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    white-space: normal;
}

/* Show the nested dropdown menu when hovering over the parent item */
.nested-dropdown:hover
    .nested-dropdown-content {
    display: block;
}

.mode_button {
    width: 200px;
    height: 100px;
    font-size: xx-large;
    background-color:#ffffff;
    border-style: hidden;
}

.active_mode_button {
    outline-style: dashed;
    outline-offset: -10px;
}

.remove_add_edit_button {
    border-radius: 50%;
    width: 50px;
    height: 50px;
    margin: 15px;
    display: flex;
    border-style: solid;
    align-items: center;
    justify-content: center;
    -webkit-user-select: none;
    user-select: none;
    /*line-height: 0px;*/
}

.remove_add_edit_button:hover {
    background-color:rgb(255, 145, 0);
}

/*.remove_add_edit_button p {
    font-size: x-large;
    font-family: tahoma;
}*/

.remove_add_edit_button.hidden {
    display: none;
}

.history_button {
    /*display: inline;*/
    width: 40px;
    height: 40px;
    margin: 5px;
    /*text-align: center;
    vertical-align: middle;*/
}

#solve_button {
    margin: 5px
}

